--- a/SmsMicroservice/appsettings.json
+++ b/SmsMicroservice/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "MongoConnectionString": "mongodb+srv://Test:TestPassword@cluster0.bo0zb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+  "MongoDatabasename": "TestDb"
 }
