--- a/MessageComponets/MessageComponets.csproj
+++ b/MessageComponets/MessageComponets.csproj
@@ -7,9 +7,12 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.10" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
     <ProjectReference Include="..\MessageContracts\MessageContracts.csproj" />
   </ItemGroup>
 
